--- a/day1-pm/ids_autoencoder_v3.ipynb
+++ b/day1-pm/ids_autoencoder_v3.ipynb
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1288,9 +1288,8 @@
    "source": [
     "**Exercises (Optional)**\n",
     "\n",
-    "- You can try to change the Autoencoder's hidden layers to have more or less units and observe the training loss and validation loss\n",
-    "- You can try to change the latent dimension to be larger or smaller and observe the training and validation loss.\n",
-    "- Try your trained model on another test dataset (e.g. Friday-WorkingHours-Afternoon-PortScan.pcap_ISCX.csv) and see how it performs."
+    "- Try your trained model on another test dataset (e.g. Friday-WorkingHours-Afternoon-PortScan.pcap_ISCX.csv) and see how it performs.- You can try to change the Autoencoder's hidden layers to have more or less units and observe the training loss and validation loss\n",
+    "- You can try to change the latent dimension to be larger or smaller and observe the training and validation loss.\n"
    ]
   },
   {
