--- a/day1-pm/ids_autoencoder_v3.ipynb
+++ b/day1-pm/ids_autoencoder_v3.ipynb
@@ -852,7 +852,7 @@
     "\\frac{1}{m}\\sum_{i=1}^m (\\hat{y}_{i} - y_i)^2\n",
     "\\end{equation*}\n",
     "\n",
-    "wher $\\hat{y}$ is the predicted output and $y$ is the actual value. \n",
+    "where $\\hat{y}$ is the predicted output and $y$ is the actual value. \n",
     "\n",
     "The second loss which is the latent_loss is given by the following formula: \n",
     "\n",
