--- a/day1-pm/ids_autoencoder_v3.ipynb
+++ b/day1-pm/ids_autoencoder_v3.ipynb
@@ -1317,7 +1317,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python3.8 (tf2env)",
+   "display_name": "Python (tf2env)",
    "language": "python",
    "name": "tf2env"
   },
@@ -1331,7 +1331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
