Updates to description for day2-pm/lab1/2/3's exercise.ipynb files

--- a/day2-pm/lab1/exercise.ipynb
+++ b/day2-pm/lab1/exercise.ipynb
@@ -23,7 +23,9 @@
    "source": [
     "# Lab 1 - Sentiment Analysis with Scikit-Learn\n",
     "\n",
-    "In this lab exercise, we will learn how to perform Sentiment Analysis with Scikit-Learn, a popular Machine Learning toolkit for Classical Machine Learning. We will explore using TF-IDF and various Classical Machine Learning algorithms such as Naive Bayes and SVM to classify whether sentiments of movie reviews are positive or negative."
+    "In this lab exercise, we will learn how to perform Sentiment Analysis with Scikit-Learn, a popular Machine Learning toolkit for Classical Machine Learning. Sentiment Analysis is a Text Classification task where you model learns how to classify a paragraph or a document of text into whether it is a positive or a negative sentiment.\n",
+    "\n",
+    "We will explore using TF-IDF and various Classical Machine Learning algorithms such as Naive Bayes and SVM to classify whether sentiments of movie reviews are positive or negative."
    ]
   },
   {
@@ -62,9 +64,9 @@
    "source": [
     "## Section 1.2 - Load Data from CSV\n",
     "\n",
-    "Update the following code to load the training and test data from the correct CSV file path, and indicate the appropriate column names to extracthe input text, and output classification label.\n",
+    "Update the following code to load the training and test data from the correct CSV file path, and indicate the appropriate column names to extract the input text, and output classification label.\n",
     "\n",
-    "The path to the training file should be \"data/train.csv\", and the path to the test file should be\"test.csv\". The column names to the input text and output labels can be found in the train.csv and test.csv files.\n"
+    "The path to the training file should be **\"data/train.csv\"**, and the path to the test file should be **\"test.csv\"**. The column names to the input text and output labels can be found in the train.csv and test.csv files.\n"
    ]
   },
   {
@@ -95,7 +97,9 @@
    "source": [
     "## Section 1.3 - Display Loaded Data\n",
     "\n",
-    "Run the following code to display the training data that we have loaded."
+    "Run the following code to display the training data that we have loaded.\n",
+    "\n",
+    "Can you identify which parts are the input texts, and which parts are the output labels?"
    ]
   },
   {
@@ -159,13 +163,13 @@
    "source": [
     "## Section 1.5 - Training and Evaluating the Model\n",
     "\n",
-    "Run the train to perform the training. The data pipeline set up in Scikit-Learn in the helpers already uses NLTK to tokenize (split into words) and lemmatize (convert words into root forms) before converting it into Bag-of-Words + TF-IDF counts and then passing that count into the Machine Learning model. \n",
+    "Run the following cell to perform the training. The data pipeline set up in Scikit-Learn in the helpers already uses NLTK to tokenize (split into words) and lemmatize (convert words into root forms) before converting it into Bag-of-Words + TF-IDF counts and then passing that count into the Machine Learning model. \n",
     "\n",
     "This is how the processing pipeline for Natural Language Processing in Scikit-Learn will look like.\n",
     "\n",
     "<img src=\"files/scikit.PNG\" />\n",
     "\n",
-    "Once the training is complete, review the results below and look at how well your model is fairing. Take a look at the test data's accuracy, because it is the most meaningful metric and telling us how well our model works for data that doesn't exist in the training set.\n"
+    "Once the training is complete, review the results below and look at how well your model is fairing. Take a look at the test data's F1 score, because it is a meaningful metric that tells us how well our model works for data that doesn't exist in the training set.\n"
    ]
   },
   {
@@ -196,7 +200,7 @@
     "\n",
     "Once you have run the following cell, take a look at the file in the folder. \n",
     "\n",
-    "If you trained using Naive Bayes, we recommend that you save into a file name such as \"models/naivebayes.scikit\". If you trained your model with SVM, save into a file name such as \"models/svm.scikit\".\n",
+    "If you trained using Naive Bayes, we recommend that you save into a file name such as **\"models/naivebayes.scikit\"**. If you trained your model with SVM, save into a file name such as **\"models/svm.scikit\"**.\n",
     "\n",
     "Once you have saved the model, head back to Step 1.4 to try and train your text classification task with another Machine Learning model."
    ]
@@ -254,9 +258,11 @@
     "\n",
     "Discuss your findings. \n",
     "\n",
-    "1. Do you think that the classification has been accurate?\n",
+    "1. Which model was more accurate based on the F1-score calculated after training?\n",
     "\n",
-    "2. What else can you do to improve the accuracy of the model?\n"
+    "2. Do you think that the classification has been accurate when you actually tried the model?\n",
+    "\n",
+    "3. What else can you do to improve the accuracy of the model?\n"
    ]
   },
   {
@@ -283,8 +289,15 @@
    "source": [
     "## Section 1.9 - Explore the helpers.py code\n",
     "\n",
-    "Take a look at the code within the helpers.py file to see how the codes to load the data, create the Machine Learning model, train the model and perform classification were written."
+    "Take a look at the code within the helpers.py file to see the codes that load the training and test data, create the Machine Learning model, train the model and perform classification."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
