--- a/day2-pm/lab2/exercise.ipynb
+++ b/day2-pm/lab2/exercise.ipynb
@@ -95,9 +95,9 @@
     "\n",
     "The following function creates a dictionary of n words, based the words that appeared in all the training data. \n",
     "\n",
-    "It also performs tokenization which is a necssary step to split up a sentence into into words, and assigning a numeric identifier to the word. \n",
+    "It also performs tokenization, which is a necessary step to split up a sentence into into words, and assigning a numeric identifier to the word. \n",
     "\n",
-    "With Scikit-Learn, the tokenization (as well as Lemmatization) is handled by the NLTK toolkit and integrated into the Scikit-Learn processing pipeline. But in the case of Keras, we have to handle that by ourselves. While lemmatization is highly beneficial in Classical Machine Learning algorithms, it's improvement to performance may be less significant in Deep Learning, depending on the written language that you are trying to classify. In our case, we will proceed to classify our movie reviews without lemmatizing the text.\n",
+    "With Scikit-Learn, the tokenization (as well as Lemmatization) is handled by the NLTK toolkit and integrated into the Scikit-Learn processing pipeline. But in the case of Keras, we have to handle that by ourselves. While lemmatization is beneficial in Classical Machine Learning algorithms, it's improvement to performance may be less significant in Deep Learning, depending on the written language that you are trying to classify. In our case, we will proceed to classify our movie reviews without lemmatizing the text.\n",
     "\n",
     "Go ahead to run the cell below to build our dictionary and data set."
    ]
@@ -125,7 +125,7 @@
    "source": [
     "Run the cell below to see how our sentences now look like.\n",
     "\n",
-    "You can see that each sentence have been converted into a series of numbers."
+    "You can see that each sentence has been converted into a series of numbers."
    ]
   },
   {
@@ -143,9 +143,9 @@
    "source": [
     "## Section 2.3 - Load the Glove Word Embeddings\n",
     "\n",
-    "Word Embeddings are a well-recognized way represent the meaning of a word in Machine Learning. Thanks to the vast sources of written text on the internet today from sources such as written articles, news, Wikipedias, we have amassed a huge corpus of language data useful in training and produce a machine-learned representation of words.\n",
+    "Word Embeddings are a well-recognized way of representing the meaning of a word in Machine Learning. Thanks to the vast sources of written text on the internet today from written articles, news, Wikipedias, user-generated content on social media, we have amassed a huge corpus of language data useful in training and producing a machine-learned representation of words.\n",
     "\n",
-    "A few of the Word Embedding that has been pre-trained and made available for download are the Glove and Word2Vec embeddings. These embeddings are basically a dictionary look-up that maps a word to a series of numbers.\n",
+    "A few of the Word Embeddings that have been pre-trained and made available for download are the Glove and Word2Vec embeddings. These embeddings are basically a dictionary look-up that maps a word to a series of numbers.\n",
     "\n",
     "For this exercise, we will use the Glove Embeddings available here: https://nlp.stanford.edu/projects/glove/\n",
     "\n",
@@ -168,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run the following cell to see how a real word embedding looks like."
+    "Replace the ??? with any known English word, and run the following cell to see how a real word embedding looks like."
    ]
   },
   {
@@ -187,7 +187,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Humans can visualize nearby words if we wrote all of them in Post-Its and pasted them in a 2-dimensional flipchart well. But in practice, we need more than 2 dimensions to capture semantics in a word. The Glove Embedding that we use captures 200 dimensions of numbers per word. We won't be able to visualize distances in 200 dimensions, but machines will have no problems computing distances of words representing with any number of dimensions. \n",
+    "Humans can visualize nearby words if we wrote all of them in Post-Its and pasted them in a 2-dimensional flipchart. But in practice, we need more than 2 dimensions to capture meaning in a word. The Glove Embedding that we use captures 200 dimensions of numbers per word. We won't be able to visualize nearby words with a 200-dimension representation, but machines will have no problems computing distances of words represented with any number of dimensions. \n",
+    "\n",
+    "By feeding the Word Embeddings of each word in a sentence to the Deep Learning model, we are essentially telling the Deep Learning model to make use of the meaning of each words in a paragraph to classify that paragraph. \n",
     "\n",
     "Run the following cell with any word to see how the machine can determine the closest matching/meaning words with the help of the Glove Word Embedding look up."
    ]
@@ -217,9 +219,13 @@
     "\n",
     "<img src=\"files/we_rnn_dl.PNG\" height=\"100\">\n",
     "\n",
-    "There are some hyper-parameters you can change to alter the structure of the model and how the model learns.\n",
+    "The Word Embedding captures the meaning of the words, while the Recurrent Neural Network attempts to make sense of the order and position of the words. \n",
     "\n",
-    "For example, you may consider using GRU instead of LSTM, or you may choose to use a Bi-directional/Uni-directional model. \n",
+    "---\n",
+    "\n",
+    "In the cell below, we have some codes to create the above model architecture, with some hyper-parameters that you can change to alter the structure of the model and how the model learns.\n",
+    "\n",
+    "For example, you may consider using GRU instead of LSTM, or you may choose to use a Bi-directional/Uni-directional model. A Uni-directional model takes in a sequence of words in the natural reading order. A Bi-directional model takes in a sentence in from first-to-last word and last-to-first word, allowing the model to capture contexts in both directions.\n",
     "\n",
     "Update the hyper-parameters and then run the cell to create the model.\n",
     "\n",
@@ -265,17 +271,15 @@
    "source": [
     "## Section 2.5 - Train Your Model\n",
     "\n",
-    "Update the number of epochs to train, and then run the cell below to start the training. \n",
-    "\n",
-    "Set:\n",
+    "Update the following parameters and then run the cell below to start the training. \n",
     "\n",
     "1. Learning rate = **0.01** (for 'sgd' optimizer), **0.001** (for 'adam' optimizer)\n",
     "2. Batch size = **100**,\n",
     "3. Number of epochs = **5**\n",
     "\n",
-    "Take a look at the accuracy of your classifications on the test data and compare it with your classical Machine Learning models. Try to adjust some of the hyper-parameters above including the RNN variant, the number of neurons, using/not using bi-directional networks, using a different optimizer, changing the batch size and the number of epochs. The run Section 2.4 and 2.5 again to train.\n",
+    "Take a look at the accuracy of your classifications on the test data and compare its F1-score with your classical Machine Learning models. Try to adjust some of the hyper-parameters above including the RNN variant, the number of neurons, using/not using bi-directional networks, using a different optimizer, changing the batch size and the number of epochs. The run Section 2.4 and 2.5 again to train.\n",
     "\n",
-    "Try experimenting with different combinations of hyper-parameters to see if you can achieve a good level of accuracy."
+    "Try experimenting with different combinations of hyper-parameters to see if you can achieve a good F1-score."
    ]
   },
   {
@@ -363,10 +367,11 @@
     "\n",
     "Run the following code to try your model.\n",
     "\n",
-    "Discuss about how you feel about this new classifier?\n",
+    "Discuss how you feel about this new classifier:\n",
     "\n",
     "1. Did the accuracy of your model performance increase with Deep Learning?\n",
-    "2. How does the accuracy of your model feel when you are testing it manually?\n"
+    "2. What do you think you can do to further improve the accuracy of your model?\n",
+    "3. How does the accuracy of your model feel when you are testing it manually?\n"
    ]
   },
   {
@@ -393,7 +398,7 @@
    "source": [
     "## Section 2.9 - Explore helpers.py\n",
     "\n",
-    "Go ahead again to examine the codes in helpers.py to see how we create the machine learning model in Keras."
+    "Go ahead again to examine the codes in helpers.py to see how we create the Deep Learning model in Keras."
    ]
   },
   {
