--- a/day2-pm/lab3/exercise.ipynb
+++ b/day2-pm/lab3/exercise.ipynb
@@ -62,7 +62,7 @@
     "https://arxiv.org/pdf/1910.10261.pdf\n",
     "\n",
     "\n",
-    "According to Nemo's website above, this model has been trained on a large number of speech datasets, including the Singapore National Speech Corpus (English).\n",
+    "According to Nemo's website above, this model has been trained on a large number of speech datasets, including the Singapore National Speech Corpus (English). In theory, this model should work well in recognizing local accents, and you can go ahead to put it to the test!\n",
     "\n",
     "Update the following cell to pass in the config file's path **\"config/config.yaml\"** into the first parameter, and the pre-trained model name  **\"QuartzNet15x5Base-En\"** into the second parameters.\n",
     "\n",
@@ -337,7 +337,7 @@
     "\n",
     "Training an Automatic Speech Recognition model takes a lot of time. Fortunately, the AN4 dataset is small enough for us to train our model quickly for demonstration purposes.\n",
     "\n",
-    "Update the parameters to indicate where load the model's configuration that uses a Jasper architecture, the training data and validation data manifest files are.\n",
+    "Update the parameters to indicate where to load the model's configuration file (configured to use a Jasper architecture), the training data and validation data manifest files.\n",
     "\n",
     "The Jasper architecture looks like the following:\n",
     "\n",
@@ -366,7 +366,7 @@
     "\n",
     "Smaller batch sizes in training allow your model to converge quickly, but take slightly longer to train per epoch. Large batch sizes run quicker, but your model converges slower.\n",
     "\n",
-    "Then, run it to see how the training happens. \n",
+    "Then, run the cell below to see how the training happens. \n",
     "\n",
     "If you run this with Jupyter Notebook (not Jupyter Lab), you will be able to see the training loss and the training progresses. Pay attention to the reducing loss as the training continues. Typically, for a good Speech Recognition model in Nemo for this AN4 dataset, the loss should be about 10 or below. The lower the loss, the better the prediction confidence.  \n",
     "\n",
@@ -485,7 +485,7 @@
    "source": [
     "Run the following cell below to see what happens when we use a pre-trained model on our AN4 validation dataset.\n",
     "\n",
-    "The Word Error Rate for the pre-trained model may average at about 13%, and is not as good as we expected."
+    "The Word Error Rate for the pre-trained model may average at about 13%, and is not as good as we expected, given that the model has been pre-trained. It could very well be due to the fact that the AN4 \"spelling\" task is very different from the conversational audio datasets used to train that model. "
    ]
   },
   {
@@ -559,7 +559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once again, update and run the following cell to use our newly-trained quartznet model to compute the Word Error Rate.\n",
+    "Once again, update and run the following cell to use our newly-trained QuartzNet model to compute the Word Error Rate.\n",
     "\n",
     "With the custom training that we have done, the Word Error Rate on your test data drops dramatically. You can try to run the cell above to train the model for a few more epochs to reduce the Word Error Rate. You may find that the Word Error Rate can drop down to about 2%!\n",
     "\n",
@@ -620,7 +620,7 @@
    "source": [
     "## Section 3.10 - Testing Your Model\n",
     "\n",
-    "This is how we can perform a transcription on a WAV file using our newly trained Quartznet model.\n"
+    "This is how we can perform a transcription on a WAV file using our newly trained QuartzNet model.\n"
    ]
   },
   {
@@ -672,6 +672,15 @@
     "# the single quotation marks \"'\"\n",
     "#\n",
     "perform_transcription_on_file('???')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try also to record conversational speech.\n",
+    "\n",
+    "Discuss about what happened to your newest model when trying to transcribe conversational speech compared to the original unaltered pre-trained model?\n"
    ]
   },
   {
