Updated the lab2 exercise files to update/add images

--- a/day2-pm/lab2/exercise.ipynb
+++ b/day2-pm/lab2/exercise.ipynb
@@ -93,6 +93,12 @@
    "source": [
     "## Section 2.2 - Build a Word Dictionary and Tokenize Text\n",
     "\n",
+    "Let's review the various stages in our Text Classification task using Deep Learning. The first step is to go through our text processing to tokenize a string of text inot individual words. Then we convert each word into Word Embeddings. Next, we pass the sequence of words into a Recurrent Neural Network which then computes a series of features before sending that into a Fully Connected dense layer for classification. \n",
+    "\n",
+    "<img src=\"files/textclass_dl.PNG\" />\n",
+    "\n",
+    "---\n",
+    "\n",
     "The following function creates a dictionary of n words, based the words that appeared in all the training data. \n",
     "\n",
     "It also performs tokenization, which is a necessary step to split up a sentence into into words, and assigning a numeric identifier to the word. \n",
