Fixed typo in day2-pm/lab2 exercise

--- a/day2-pm/lab2/exercise.ipynb
+++ b/day2-pm/lab2/exercise.ipynb
@@ -93,7 +93,7 @@
    "source": [
     "## Section 2.2 - Build a Word Dictionary and Tokenize Text\n",
     "\n",
-    "Let's review the various stages in our Text Classification task using Deep Learning. The first step is to go through our text processing to tokenize a string of text inot individual words. Then we convert each word into Word Embeddings. Next, we pass the sequence of words into a Recurrent Neural Network which then computes a series of features before sending that into a Fully Connected dense layer for classification. \n",
+    "Let's review the various stages in our Text Classification task using Deep Learning. The first step is to go through our text processing to tokenize a string of text into individual words. Then we convert each word into Word Embeddings. Next, we pass the sequence of words into a Recurrent Neural Network which then computes a series of features before sending that into a Fully Connected dense layer for classification. \n",
     "\n",
     "<img src=\"files/textclass_dl.PNG\" />\n",
     "\n",
